--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "my_app",
   "version": "0.1.0",
   "private": true,
-  "engines":{
-    "node":"16.14.2",
-    "npm":"8.5.0"
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.5.0"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
