package json changes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "16.14.2",
     "npm": "8.5.0"
   },
+  "homepage":"https://bildircin.github.io/weather-app/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -23,6 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
